# teashop

./: .bumpversion.cfg  .bumpversion.toml  .coveragerc  .env  .gitignore  DOCKERFILE  Dockerfile  LICENSE  README.md  Untitled.ipynb  compose.yaml  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  run-tests.ps1  run-tests.sh
teashop/: __init__.py  teashop.py
tests/: __init__.py
