[tool.poetry]
name = "teashop"
version = "0.2.0"
description = "Retrievs information about teas from the Tea Shop website"
authors = ["GeorgySk <skorobogatovgeorgy+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
requests  = "^2.31.0"
yarl = "^1.9.4"

[tool.poetry.group.dev.dependencies]
bump-my-version = "^0.18.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.82.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["teashop"]

[tool.pytest.ini_options]
addopts = "--verbose -s --hypothesis-profile=default"
