[tool.poetry]
name = "teashop"
version = "0.2.1-alpha"
description = "Retrievs information about teas from the Tea Shop website"
authors = ["GeorgySk <skorobogatovgeorgy+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.3"
requests  = "^2.31.0"
yarl = "^1.9.4"

[tool.poetry.group.dev.dependencies]
bump-my-version = "^0.20.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
hypothesis = "6.100.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["teashop"]

[tool.pytest.ini_options]
addopts = "--verbose -s --hypothesis-profile=default"
